# sd-forge-bot

./: .editorconfig  .gitignore  README.md  bot.py  chek_later.md  chek_never.md  chek_open.md  config.yaml  database.py  forge_api.py  keyboards.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: chek.md
.github/workflows/: ci.yml
tests/: test_database.py  test_forge_api.py  test_resolve_name.py
